[gd_scene load_steps=10 format=3 uid="uid://d370efcvbuchm"]

[ext_resource type="ButtonGroup" uid="uid://gjbbywsr8n8b" path="res://Scenes/Player/UI/spawnables_button_group.tres" id="2_ma8s0"]
[ext_resource type="PackedScene" uid="uid://bap3ds6o3m4i1" path="res://Scenes/Spawnables/necromancer_spawnable.tscn" id="2_tfd72"]
[ext_resource type="Script" path="res://Scenes/Player/UI/spawnable_button.gd" id="3_8gmw0"]
[ext_resource type="Theme" uid="uid://dr1h7to56a2pv" path="res://Themes/base_theme.tres" id="4_oe55x"]
[ext_resource type="Texture2D" uid="uid://ckeayob6k71b1" path="res://Assets/Witch/noBKG_WitchIdle_strip.png" id="5_g2gp2"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ons44"]
atlas = ExtResource("5_g2gp2")
region = Rect2(0, 0, 64, 64)

[sub_resource type="Animation" id="Animation_r6yl2"]
resource_name = "AnimateTextureRect"
length = 0.583341
loop_mode = 1
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedTextureRect:texture:region")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0833333, 0.166667, 0.25, 0.333333, 0.416667, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Rect2(0, 0, 64, 64), Rect2(64, 0, 64, 64), Rect2(128, 0, 64, 64), Rect2(192, 0, 64, 64), Rect2(256, 0, 64, 64), Rect2(320, 0, 64, 64), Rect2(384, 0, 64, 64)]
}

[sub_resource type="Animation" id="Animation_tak1b"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedTextureRect:texture:region")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(0, 0, 64, 64)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0o4ue"]
_data = {
"AnimateTextureRect": SubResource("Animation_r6yl2"),
"RESET": SubResource("Animation_tak1b")
}

[node name="NecromancerButton" type="Button"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -854.0
offset_bottom = -499.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 0
mouse_default_cursor_shape = 2
theme = ExtResource("4_oe55x")
toggle_mode = true
button_group = ExtResource("2_ma8s0")
script = ExtResource("3_8gmw0")
spawnableScene = ExtResource("2_tfd72")

[node name="AnimatedTextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = -1.78302
anchor_top = -0.414634
anchor_right = 2.78302
anchor_bottom = 1.14634
offset_left = 210.0
offset_right = -210.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_ons44")
stretch_mode = 5
metadata/_edit_use_anchors_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
speed_scale = 0.6
libraries = {
"": SubResource("AnimationLibrary_0o4ue")
}

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -18.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("4_oe55x")
text = "Necromancer"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ToolTip" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -10.0
offset_top = -91.0
offset_right = -10.0
offset_bottom = -55.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2
theme = ExtResource("4_oe55x")
metadata/_edit_use_anchors_ = true

[node name="ToolTipLabel" type="Label" parent="ToolTip"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 1
text = "Attack  : 100
HP: 30
"
horizontal_alignment = 1
vertical_alignment = 2

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
